2003-02-21  Ulrich Drepper  <drepper@redhat.com>

	* Makefile (tests): Remove tst-basic7.  Add tst-kill1, tst-kill2,
	tst-kill3, tst-kill4.

2003-02-21  Roland McGrath  <roland@redhat.com>

	* Makefile (install-lib-ldscripts): New variable.

2003-02-21  Ulrich Drepper  <drepper@redhat.com>

	* pthreadP.h: Define INVALID_TD_P and INVALID_NOT_TERMINATED_TD_P.
	* pthread_cancel.c: Use INVALID_TD_P.
	* pthread_detach.c: Likewise.
	* pthread_getschedparam.c: Likewise.
	* pthread_setschedparam.c: Likewise.
	* sysdeps/pthread/pthread_getcpuclockid.c: Likewise.
	* sysdeps/unix/sysv/linux/pthread_kill.c: Likewise.
	* pthread_join.c: Use INVALID_NOT_TERMINATED_TD_P.
	* pthread_timedjoin.c: Likewise.

	* tst-basic7.c: Include <signal.h>.

	* pthread_join.c (pthread_join): Limited checking for invalid
	descriptors.
	* pthread_timedjoin.c (pthread_timedjoin_np): Likewise.

2003-02-20  Ulrich Drepper  <drepper@redhat.com>

	* pthread_create.c (deallocate_tsd): Reset found_nonzero at the
	beginning of the loop.  Clear the entire first block of TSD.
	* Makefile (tests): Add tst-key4.
	* tst-key4.c: New file.

2003-02-18  Ulrich Drepper  <drepper@redhat.com>

	* Makefile (tests): Add tst-basic7.
	* tst-basic7.c: New file.

	* pthread_create.c (deallocate_tsd): Mark as internal_function.
	Add some more __builtin_expect.

	* pthreadP.h: Define dummy version of DEBUGGING_P.

2003-02-17  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/i386/bits/posix_opt.h: Remnove
	_POSIX_THREAD_PRIORITY_SCHEDULING.
	* sysdeps/unix/sysv/linux/i386/bits/posix_opt.h: Remove
	_XOPEN_REALTIME_THREADS.
	* sysdeps/unix/sysv/linux/bits/posix_opt.h: Likewise.

	* sysdeps/unix/sysv/linux/pthread_kill.c (__pthread_kill): The
	kernel returns EINVAL for PID <= 0, work around it.

	* Makefile (tests): Add tst-signal5.
	* tst-signal5.c: New file.

	* sysdeps/unix/sysv/linux/bits/local_lim.h: Define TTY_NAME_MAX
	and LOGIN_NAME_MAX.

	* tst-cancel1.c (tf): Block all signals.
